[package]
name = "locust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.37", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
open = "5.0"